[gd_scene load_steps=3 format=3 uid="uid://ct4kf076cmi6d"]

[ext_resource type="Script" path="res://equipment/spinng_laser.gd" id="1_5lk28"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vfhun"]
radius = 500.0

[node name="spinning_laser" type="Node2D"]
script = ExtResource("1_5lk28")

[node name="LaserLine" type="Line2D" parent="."]
z_index = 3
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
z_index = 3
y_sort_enabled = true
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vfhun")

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[node name="ChargeTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
